--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: simple-web-app.war
+  - source: target/simple-web-app.war
     destination: /opt/bitnami/apache-tomcat/webapps
 hooks:
   ApplicationStart:
