--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,8 @@ files:
   - source: /tmp/target/simple-web-app.war
     destination: /opt/bitnami/apache-tomcat/webapps
 hooks:
+  BeforeInstall:
+    - location: startup.sh
   ApplicationStart:
     - location: restart.sh    
       timeout: 180
