--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,5 @@
 version: 0.0
 os: linux
 files:
-  - source: /tmp/target/simple-web-app.war
+  - source: ./simple-web-app.war
     destination: /opt/bitnami/apache-tomcat/webapps
-hooks:
-    ApplicationStart:
-    - location: restart.sh    
-      timeout: 180
-      runas: root
