--- a/appspec.yml
+++ b/appspec.yml
@@ -2,4 +2,10 @@ version: 0.0
 os: linux
 files:
   - source: target/simple-web-app.war
-    destination: /tmp
+    destination: /opt/bitnami/apache-tomcat/webapps
+
+hooks:
+  ApplicationStart:
+    - location: restart.sh
+      timeout: 180
+
