updated root priv

--- a/appspec.yml
+++ b/appspec.yml
@@ -7,9 +7,11 @@ hooks:
   BeforeInstall:
     - location: stop.sh
       timeout: 300
+      runas: root
   ApplicationStart:
     - location: start.sh
       timeout: 300
+      runas: root
       
  
 
